--- a/app/views/static/game.html.erb
+++ b/app/views/static/game.html.erb
@@ -34,4 +34,5 @@
   <!--<div id="stats_panel"></div>-->
 </div>
 
+<img id="g_img" src="assets/ghostSheet.PNG" style="display: none"/>
 <script src="assets/require.js" data-main="assets/loader"></script>
