Now have test ai generation script

--- a/client/app/routes/game/game.jade
+++ b/client/app/routes/game/game.jade
@@ -1,2 +1,13 @@
-canvas#game
-    | hi
+div#game-page
+    div#cursor
+    canvas#game
+    div#controls
+        span#buttons
+            button#step-backward.fa.fa-step-backward
+            button#reverse.fa.fa-play
+            button#pause.fa.fa-pause
+            button#loop.fa.fa-repeat
+            button#forward.fa.fa-play
+            button#step-forward.fa.fa-step-forward
+        span#timeline
+            div#t_pos
