--- a/client/app/routes/game/game.styl
+++ b/client/app/routes/game/game.styl
@@ -1,3 +1,97 @@
-body
+$green = #13BA45
+$red = #bc2439
+
+$num-of-controls = 6
+
+#game-page
     overflow: hidden
-    cursor: none
+    // cursor: none !important
+
+    // #cursor
+    //     position  : absolute;
+    //     z-index   : 10000;
+    //     width     : 30px;
+    //     height    : 30px;
+    //     background: #444
+    //     animation: spin 3s linear infinite
+    //     pointer-events: none
+    //     &::before
+    //         content: ''
+    //         display: block
+    //         position: relative
+    //         width: 16px
+    //         height: 16px
+    //         left: 8px
+    //         top: 8px
+    //         margin: -1px
+    //         background: #888
+    //         animation: spin 1.5s linear infinite
+    //         animation-direction: reverse
+    //     &::after
+    //         content: ''
+    //         display: block
+    //         position: relative
+    //         width: 16px
+    //         height: 50px
+    //         left: 8px
+    //         top: 0px
+    //         background: white
+    //         animation: spin 3s linear infinite
+    //         animation-direction: reverse
+    #controls
+        position: absolute
+        width: 75%
+        height: 25px
+        top: 25px
+        left: 50%
+        transform: translate(-50%, 0)
+        button, button:active
+            top: -7px
+            position: relative
+            width: 50px
+            height: 35px
+            color: white
+            background: $green
+            border: 1px solid darken($green, 15%)
+            &#reverse
+                transform: rotateY(180deg)
+            &.fa-pause
+                background: $red
+                border-color: darken($red, 15%)
+                &:hover
+                    background: darken($red, 10%)
+                    border-color: darken($red, 25%)
+            &:focus
+                outline: none
+            &:hover
+                background: darken($green, 10%)
+                border-color: darken($green, 25%)
+            &:active
+                box-shadow: inset 0 3px 5px rgba(0,0,0,.125)
+            &:first-child
+                border-top-left-radius: 5px
+                border-bottom-left-radius: 5px
+            &:last-child
+                margin-right: 10px
+                border-top-right-radius: 5px
+                border-bottom-right-radius: 5px
+        #timeline
+            display: inline-block
+            width: "calc(100% - 50px * %s - 10px)" % $num-of-controls
+            height: 25px
+            background: $red
+            border: 1px solid darken($red, 15%)
+            border-radius: 3px
+            #t_pos
+                position: relative
+                top: -12px
+                left: 1px
+                width: 24px
+                height: 48px
+                background: darken($red, 10%)
+                border: 1px darken($red, 25%) solid
+                border-radius: 4px
+
+@keyframes spin
+    100%
+        transform: rotate(360deg)
